--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,12 @@ ul {
 .calculation-item li span {
     font-size: 14px;
     color: #414141;
+    text-align: left;
 }
 .geometry-right li {
     display: grid;
     padding: 0;
-    grid-template-columns: 1px 1fr 1fr auto;
+    grid-template-columns: 1.2fr 1fr 1fr;
     gap: 10px;
     margin-bottom: 10px;
 }
@@ -123,5 +124,14 @@ ul {
     .blog-wrapper {
         width: 100%;
         margin: 0 auto;
+    }
+}
+
+@media (min-width: 1400px) {
+    .col-lg-8 {
+        width: 68%;
+    }
+    .col-lg-4 {
+        width: 31.33%;
     }
 }
